Added (modified) patch from Ian Boston to allow for running against a test tomcat instance. Added the dependencies that have been newly added to the 2.2 checkout.
git-svn-id: https://source.sakaiproject.org/svn/test-harness/trunk@7961 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/src/conf/log4j.properties
+++ b/src/conf/log4j.properties
@@ -12,6 +12,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 ### Show debug information for the test harness itself, and any critical collaborators
 log4j.logger.org.sakaiproject.test.SakaiTestBase=debug
 log4j.logger.org.sakaiproject.test.SakaiTestTimer=debug
+#log4j.logger.org.sakaiproject.component.impl.SpringCompMgr=debug
 #log4j.logger.org.apache.catalina.loader.WebappClassLoader=debug
 #log4j.logger.org.sakaiproject.util.ComponentsLoader=debug
 
