--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,6 @@
 	<classpathentry exported="true" sourcepath="/JAVA_DIR/jakarta-tomcat-5.5.9/src" kind="var" path="MAVEN_REPO/tomcat/jars/catalina-5.5.9.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/tomcat/jars/tomcat-util-5.5.9.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/tomcat/jars/naming-resources-5.5.9.jar"/>
-	<classpathentry exported="true" kind="var" path="MAVEN_REPO/servletapi/jars/servlet-api-2.4.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/portlet-api/jars/portlet-api-1.0.1.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/commons-lang/jars/commons-lang-2.1.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/commons-collections/jars/commons-collections-3.1.jar"/>
@@ -30,8 +29,6 @@
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/xalan/jars/xalan-2.6.0.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/xerces/jars/xercesImpl-2.6.2.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/jdom/jars/jdom-1.0.jar"/>
-	<classpathentry exported="true" kind="var" path="MAVEN_REPO/OKI/jars/OkiOSID-2.0.jar"/>
-	<classpathentry exported="true" kind="var" path="MAVEN_REPO/quartz/jars/quartz-1.5.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/alias-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/calendar-api"/>
@@ -49,5 +46,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util"/>
 	<classpathentry kind="var" path="MAVEN_REPO/springframework/jars/spring-mock-1.2.6.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
