SAK-4520 http://bugs.sakaiproject.org/jira/browse/SAK-4520 Upgrade Hibernate from 2.1.8 to 3.1.3
git-svn-id: https://source.sakaiproject.org/svn/test-harness/trunk@8926 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/.classpath
+++ b/.classpath
@@ -22,7 +22,7 @@
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/cglib/jars/cglib-full-2.0.2.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/dom4j/jars/dom4j-1.6.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/ehcache/jars/ehcache-1.1.jar"/>
-	<classpathentry exported="true" kind="var" path="MAVEN_REPO/hibernate/jars/hibernate-2.1.8.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org.hibernate/jars/hibernate-3.1.3.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/jdbc/jars/jdbc2_0-stdext-h2.1.8.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/jta/jars/jta-h2.1.8.jar"/>
 	<classpathentry exported="true" kind="var" path="MAVEN_REPO/odmg/jars/odmg-3.0.jar"/>
