Test harness status: -- no sakai dependencies (other than the maven plugin) -- no tomcat dependencies -- now starts the component manager -- services are not properly resolved (throwing ClassCastException)
git-svn-id: https://source.sakaiproject.org/svn/test-harness/branches/no_maven_dep@9622 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/project.properties
+++ b/project.properties
@@ -5,7 +5,7 @@ maven.junit.format=plain
 maven.junit.usefile=false
 
 # Fork the integration tests by default
-maven.junit.fork=true
+maven.junit.fork=false
 
 # Skip these tests by default, until we repackage how they launch the component manager
 maven.test.skip=true
