--- a/src/conf/log4j.properties
+++ b/src/conf/log4j.properties
@@ -18,3 +18,7 @@ log4j.logger.org.sakaiproject.util.ComponentsLoader=debug
 
 ### Use this syntax to open logging for any failing components to help debug the problem
 #log4j.logger.org.sakaiproject.component.section.sakai21.SectionAwarenessImpl=debug
+log4j.logger.org.sakaiproject.test.section.SectionAwarenessImplTest=debug
+
+log4j.logger.sun.misc.URLClassPath=debug
+log4j.logger.java.net.URLClassLoader=debug
