--- a/src/conf/log4j.properties
+++ b/src/conf/log4j.properties
@@ -1,7 +1,7 @@
 ### Default to error-only logging.  Selectively expose more in your test classes
 ### if you need to, but don't change the default, since the sakai component
 ### loading is quite noisy.
-log4j.rootLogger=error,stdout
+log4j.rootLogger=warn,stdout
 
 ### Write test output to the console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -10,15 +10,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 ### Show debug information for the test harness itself, and any critical collaborators
-log4j.logger.org.sakaiproject.test.SakaiTestBase=debug
-log4j.logger.org.sakaiproject.test.SakaiTestTimer=debug
-log4j.logger.org.sakaiproject.component.impl.SpringCompMgr=debug
-log4j.logger.org.apache.catalina.loader.WebappClassLoader=debug
-log4j.logger.org.sakaiproject.util.ComponentsLoader=debug
+log4j.logger.org.sakaiproject.component.impl.SpringCompMgr=info
+log4j.logger.org.sakaiproject.util.ComponentsLoader=info
 
-### Use this syntax to open logging for any failing components to help debug the problem
-#log4j.logger.org.sakaiproject.component.section.sakai21.SectionAwarenessImpl=debug
-log4j.logger.org.sakaiproject.test.section.SectionAwarenessImplTest=debug
-
-log4j.logger.sun.misc.URLClassPath=debug
-log4j.logger.java.net.URLClassLoader=debug
+### Add more lines for each class fow which you want to increase the logging level
