Cleaned up test harness... ready for the trunk again.
git-svn-id: https://source.sakaiproject.org/svn/test-harness/branches/no_maven_dep@9712 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/src/conf/log4j.properties
+++ b/src/conf/log4j.properties
@@ -9,8 +9,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-### Show debug information for the test harness itself, and any critical collaborators
-log4j.logger.org.sakaiproject.component.impl.SpringCompMgr=info
-log4j.logger.org.sakaiproject.util.ComponentsLoader=info
+### Add more lines for each class for which you want to increase the logging level
+#log4j.logger.org.sakaiproject.component.impl.SpringCompMgr=info
+#log4j.logger.org.sakaiproject.util.ComponentsLoader=info
 
-### Add more lines for each class fow which you want to increase the logging level
