--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>master</artifactId>
+    <artifactId>base</artifactId>
     <groupId>org.sakaiproject</groupId>
     <version>M2</version>
-    <relativePath>../master/pom.xml</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <name>Sakai Test Harness</name>
   <groupId>org.sakaiproject</groupId>
   <artifactId>sakai-test-harness</artifactId>
   <packaging>jar</packaging>
   <properties>
-    <deploy.target></deploy.target>
+    <deploy.target/>
   </properties>
   <dependencies>
 <!--  Sakai plugin -->
@@ -48,12 +48,6 @@
   </developers>
   <reports/>
   <build>
-    
-    
-    
-    
-    
-    
     <resources>
       <resource>
         <directory>src/conf</directory>
@@ -62,7 +56,6 @@
         </includes>
       </resource>
     </resources>
-    
 <!--nagEmailAddress: jholtzman@berkeley.edu -->
   </build>
 </project>
