--- a/api/logic/pom.xml
+++ b/api/logic/pom.xml
@@ -55,6 +55,13 @@
          <version>${sakai.version}</version>
          <scope>provided</scope>
       </dependency>
+      
+      <dependency>
+         <groupId>org.sakaiproject</groupId>
+         <artifactId>sakai-component</artifactId>
+         <version>${sakai.version}</version>
+         <scope>provided</scope>
+      </dependency>
 
       <dependency>
          <groupId>org.sakaiproject</groupId>
