--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -29,6 +29,10 @@
       <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-site-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-user-api</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
@@ -64,10 +68,6 @@
         <version>2.4.3</version>
         <configuration>
           <systemProperties>
-            <property>
-              <name>test.tomcat.home</name>
-              <value>${test.tomcat.home}</value>
-            </property>
             <property>
               <name>maven.tomcat.home</name>
               <value>${maven.tomcat.home}</value>
