--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -12,28 +12,23 @@
   <artifactId>sakai-test-integration-test</artifactId>
   <dependencies>
     <dependency>
+      <groupId>org.sakaiproject.kernel</groupId>
+      <artifactId>sakai-kernel-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.sakaiproject.kernel</groupId>
+      <artifactId>sakai-component-manager</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-test-harness</artifactId>
       <version>${sakai.version}</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-component-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-entity-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-site-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-user-api</artifactId>
-    </dependency>
-
+<!--org.sakaiprojectsakai-component-api-->
+<!--org.sakaiprojectsakai-entity-api-->
+<!--org.sakaiprojectsakai-site-api-->
+<!--org.sakaiprojectsakai-user-api-->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring</artifactId>
@@ -45,7 +40,6 @@
       <version>${sakai.spring.version}</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
@@ -58,13 +52,13 @@
     </dependency>
   </dependencies>
   <build>
-    <!-- TODO Fix in master POM -->
+<!-- TODO Fix in master POM -->
     <testSourceDirectory>src/test/java</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <!-- TODO These settings should all be set as defaults in the master POM -->
+<!-- TODO These settings should all be set as defaults in the master POM -->
         <version>2.4.3</version>
         <configuration>
           <systemProperties>
@@ -77,8 +71,7 @@
               <value>${test.sakai.home}</value>
             </property>
           </systemProperties>
-
-          <!-- Need to clear out static configuration data between tests. -->
+<!-- Need to clear out static configuration data between tests. -->
           <forkMode>pertest</forkMode>
         </configuration>
       </plugin>
