--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -22,12 +22,9 @@
     <dependency>
       <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-test-harness</artifactId>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
-<!--org.sakaiprojectsakai-component-api-->
-<!--org.sakaiprojectsakai-entity-api-->
-<!--org.sakaiprojectsakai-site-api-->
-<!--org.sakaiprojectsakai-user-api-->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring</artifactId>
@@ -51,13 +48,13 @@
     </dependency>
   </dependencies>
   <build>
-<!-- TODO Fix in master POM -->
+	<!-- TODO Fix in master POM -->
     <testSourceDirectory>src/test/java</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-<!-- TODO These settings should all be set as defaults in the master POM -->
+		<!-- TODO These settings should all be set as defaults in the master POM -->
         <version>2.4.3</version>
         <configuration>
           <systemProperties>
@@ -70,7 +67,7 @@
               <value>${test.sakai.home}</value>
             </property>
           </systemProperties>
-<!-- Need to clear out static configuration data between tests. -->
+			<!-- Need to clear out static configuration data between tests. -->
           <forkMode>pertest</forkMode>
         </configuration>
       </plugin>
