--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,22 @@
   </scm>
   <properties>
     <deploy.target/>
+    <integration-test.skip>true</integration-test.skip>
   </properties>
+  <profiles>
+    <profile>
+      <id>all-tests</id>
+      <activation>
+        <property>
+          <name>allTests</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <properties>
+        <integration-test.skip>false</integration-test.skip>
+      </properties>
+    </profile>
+  </profiles>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -42,6 +57,16 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.sakaiproject.kernel</groupId>
+      <artifactId>sakai-kernel-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.sakaiproject.kernel</groupId>
+      <artifactId>sakai-component-manager</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <reports/>
   <build>
@@ -50,5 +75,42 @@
         <directory>src/resources</directory>
       </resource>
     </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.4.3</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>integration-test</phase>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <skipTests>${integration-test.skip}</skipTests>
+              <systemProperties>
+                <property>
+                  <name>test.sakai.home</name>
+                  <value>${test.sakai.home}</value>
+                </property>
+                <property>
+                  <name>maven.tomcat.home</name>
+                  <value>${maven.tomcat.home}</value>
+                </property>
+              </systemProperties>
+              <!--
+              	Component Manager configuration tests need to start off
+              	completely clean to avoid noise from leftover static
+              	variables.
+              -->
+              <forkMode>pertest</forkMode>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 </project>
