SAK-12334 Work around SAK-14064 to avoid confusing Eclipse
git-svn-id: https://source.sakaiproject.org/svn/test-harness/trunk@52144 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,8 @@
         <directory>src/resources</directory>
       </resource>
     </resources>
+	<!-- TODO Fix in master POM - SAK-14064 -->
+    <testSourceDirectory>src/test/java</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
