--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -6,9 +6,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-#log4j.logger.org.sakaiproject.component=debug
-#log4j.logger.org.sakaiproject.user=debug
-log4j.logger.org.sakaiproject.test=debug
+#log4j.logger.org.sakaiproject.test=debug
 
 ### Spring and Hibernate ###
 #log4j.logger.org.springframework=info
