--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>2.6.0RC1-SNAPSHOT</version>
+    <version>3.0.0-milestone01</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>Sakai Test Harness</name>
