--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>${sakai.spring.mock.artifactId}</artifactId>
+      <artifactId>${sakai.spring.test.artifactId}</artifactId>
       <version>${sakai.spring.version}</version>
     </dependency>
     <dependency>
