--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>2.6-SNAPSHOT</version>
+    <version>2.6.3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>Sakai Test Harness</name>
